Dodanie jedzenia i zjadanie (jeszcze nie dziala dobrze)

--- a/jakas_gra/jakas_gra.vcxproj.filters
+++ b/jakas_gra/jakas_gra.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="snake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="food.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="szablon_listy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="snake.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="food.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="szablon_listy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
