--- a/jakas_gra/jakas_gra.vcxproj
+++ b/jakas_gra/jakas_gra.vcxproj
@@ -151,13 +151,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="food.cpp" />
     <ClCompile Include="gra.cpp" />
     <ClCompile Include="snake.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="szablon_listy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="food.h" />
     <ClInclude Include="gra.h" />
     <ClInclude Include="snake.h" />
+    <ClInclude Include="szablon_listy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
